--- a/todolist/src/view/index.html
+++ b/todolist/src/view/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ToDoList</title>
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="/javascript/todolist/src/css/index.css" />
 	</head>
 	<body>
 		<!-- content ~ -->
@@ -38,8 +38,9 @@
 		</div>
 		<!-- ~ content -->
 
-		<script src="./index.js"></script>
-		<script src="./clock.js"></script>
-		<!-- <script src="./dumpData.js"></script> -->
+		<script src="/javascript/todolist/src/js/index.js"></script>
+		<script src="/javascript/todolist/src/js/clock.js"></script>
+        <!-- Create DumpData -->
+		<!-- <script src="/javascript/todolist/src/js/dumpData.js"></script> -->
 	</body>
 </html>
