--- a/todolist/src/view/index.html
+++ b/todolist/src/view/index.html
@@ -9,14 +9,15 @@
 	<body>
 		<!-- content ~ -->
 		<div class="content">
+
 			<!-- content_head ~ -->
 			<div class="content_head">
 				<h1>ToDoList</h1>
 				<div class="clock"></div>
 			</div>
 			<!-- ~ content_head -->
-			<!-- content_head ~ -->
 
+            <!-- content_inner ~ -->
             <div class="content_inner">
 				<div class="constent_menu">
 					<form>
@@ -33,9 +34,11 @@
 				<!-- toDo_list ~ -->
 				<div class="toDo_list"></div>
 				<!-- ~ toDo_list -->
+
 			</div>
 			<!-- ~ content_inner -->
-		</div>
+
+        </div>
 		<!-- ~ content -->
 
 		<script src="/javascript/todolist/src/js/index.js"></script>
