--- a/todolist/src/css/index.css
+++ b/todolist/src/css/index.css
@@ -49,7 +49,6 @@ body {
 
 .content_head {
     margin-top: 30px;
-    margin-bottom: 15px;
     text-align: center;
 }
 .content_head > h1{
@@ -95,7 +94,9 @@ form {
 
 .ToDo_list_item {
     display: flex;
-    margin-top: 5px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid rgb(185, 185, 185);
 }
 
 .ToDo_list_item:first-child {
@@ -107,10 +108,14 @@ input[type='checkbox']{
 }
 
 .text{
-
+    font-size: 20px;
+    max-width: 300px;
+    overflow: hidden;
+    text-overflow:ellipsis;
 }
 .date{
     margin-left: auto;
+    margin-right: 5px;
 }
 .ToDo_list_delBtn{
 
